[package]
name = "isabelle-plugin-sample"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
actix-web = { version = "4", features = ["cookies"]}
isabelle-dm = { "git" = "https://github.com/isabelle-platform/isabelle-dm" }
isabelle-plugin-api = { "git" = "https://github.com/isabelle-platform/isabelle-plugin-api" }
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
